src/objects/Territory2.object
<CustomObject>
    <fields>
        <fullName>Archive_Date__c</fullName>
        <description>Holds the date when the record was last marked for Archival.</description>
        <label>Archive Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Archive_Ind__c</fullName>
        <defaultValue>&quot;N&quot;</defaultValue>
        <description>&quot;Y&quot; Indicates that the record is ready for archival.</description>
        <inlineHelpText>&quot;Y&quot; Indicates that the record is ready for archival.</inlineHelpText>
        <label>Archive Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vegetables</fullName>
                </value>
                <value>
                    <fullName>Seed and Traits</fullName>
                </value>
                <value>
                    <fullName>Crop Protection</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>Channel</fullName>
                </value>
                <value>
                    <fullName>Kruger</fullName>
                </value>
                <value>
                    <fullName>XX</fullName>
                </value>
                <value>
                    <fullName>WestBred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HC_Integration_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is for the temporary storage of an external id for the Heroku Connect Integration. It will be used as necessary for parent-child relationships. Further integrations will be via the Salesforce Record ID.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field is for the temporary storage of an external id for the Heroku Connect Integration. It will be used as necessary for parent-child relationships. Further integrations will be via the Salesforce Record ID.</inlineHelpText>
        <label>Heroku Connect Integration Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>